[package]
name = "combine_code"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.10"      # Creates temporary folders/files for testing
assert_cmd = "2.0"     # Simplifies testing CLI binaries
predicates = "3.1"     # Allows for powerful assertions on strings/files

